# auto-redteam

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  attack.py  attestation.py  autoharden.py  campaign.py  campaign_runner.py  cli.py  config.yaml  conversation.py  defend.py  emit_policy.py  immune.py  prepare.py  pyproject.toml  requirements.txt  run.py  scoring.py  scoring_v2.py  stealth.py  training_data.py  trajectory_engine.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
attack_packs/: __init__.py  base.py  generic_taxonomy.py  registry.py
attack_packs/domains/: __init__.py  coding_agents.py  finance.py  healthcare.py  hr.py
models/: __init__.py  attacker.py  defender.py  judge.py
providers/: __init__.py  anthropic_direct.py  azure_openai.py  base.py  bedrock.py  catalog.py  cloudflare_workers.py  echo.py  google_direct.py  openai_compatible.py  openai_direct.py  registry.py
reporting/: __init__.py  generator.py  governance.py  pr_creator.py
scripts/: cross_pollinate_attacker.py  cross_pollinate_defender.py  generate_chunk.py  generate_chunk_multi.py  generate_training_data.py  merge_training_data.py
tests/: test_immune_integration.py  test_slm_closed_loop.py  test_v03_overhaul.py
training/: __init__.py  lora_trainer.py  prepare_judge_data.py  train_attacker.py  train_defender.py  train_judge.py
validation/: benchmark_runner.py  harmbench_scenarios.py
